--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </button>
         </div>
       </section>
-      <section>
+      <section class="section">
         <div class="features">
           <ul class="features-list">
             <li>
@@ -82,7 +82,7 @@
           </ul>
         </div>
       </section>
-      <section>
+      <section class="section">
         <div class="whatWeDo">
           <h2 class="headers">What we do</h2>
           <ul>
@@ -98,7 +98,7 @@
           </ul>
         </div>
       </section>
-      <section>
+      <section class="section">
         <div class="team">
           <h2 class="headers">Our team</h2>
           <ul>
