--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
       </div>
     </header>
     <main>
-      <section>
+      <section class="section">
         <div class="filter-buttons-container">
           <button type="button" class="active-filter-button">All</button>
           <button type="button" class="filter-button">Web-sites</button>
