--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <a href="index.html" class="logo link">WebStudio</a>
           <ul class="list header-ul">
             <li class="header-item">
-              <a href="#" class="header-active-link link">Studio</a>
+              <a href="index.html" class="header-active-link link">Studio</a>
             </li>
             <li class="header-item">
               <a href="portfolio.html" class="header-nav-link link"
