--- a/portfolio.html
+++ b/portfolio.html
@@ -18,10 +18,10 @@
           <a href="index.html" class="logo link">WebStudio</a>
           <ul class="list header-ul">
             <li class="header-item">
-              <a href="#" class="header-active-link link">Studio</a>
+              <a href="index.html" class="header-nav-link link">Studio</a>
             </li>
             <li class="header-item">
-              <a href="portfolio.html" class="header-nav-link link"
+              <a href="portfolio.html" class="header-active-link link"
                 >Portfolio</a
               >
             </li>
